# emergent.memory

./: .codebase.yml  .env  .env.example  .env.production.example  .env.test  .flow.yml  .gitignore  .jscpd.json  .snyk  .workspace-cli.env  356137911902535682.json  404.html  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT_v0.18.0_mcj-emergent.md  GEMINI.md  HANDOVER.md  INSTALLATION_SUCCESS.md  NOTICE  PHASE1_IMPLEMENTATION.md  QUICK_START_DEV.md  README.md  RUNBOOK.md  SETUP.md  Taskfile.yml  UPGRADE_v0.18.0.md  VERIFICATION_v0.18.0_mcj-emergent.md  VERSION  actions.json  apiendpoints.json  apply-patterns.sh  coderabbit_comments.txt  commands.sh  contexts.json  docker-compose.dev.yml  docker-compose.staging.yml  domains.json  fix.sh  go.work  go.work.sum  (+26 more)
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
.opencode/: instructions.md
api-reference/: index.html
bench/: HYPOTHESES.md
blueprints/: README.md
deploy/: install-cli.sh
dev/: 404.html  index.html  llms-go-sdk.md  llms-swift-sdk.md  openapi.json  sitemap.xml
docker/: .env  .env.example  Dockerfile.postgres  README-E2E.md  README-PREFIX.md  docker-compose.e2e.yml  init.sql  (+1 more)
docs/: llms-go-sdk.md  (+24 more)
sdk/python/: Dockerfile  README.md  pyproject.toml  pyrunner.py
sdk/python/emergent/: __init__.py  _base.py  agent_definitions.py  agents.py  api_tokens.py  auth.py  branches.py  chat.py  client.py  documents.py  exceptions.py  graph.py  mcp.py  orgs.py  projects.py  schemas.py  search.py  skills.py  sse.py  tasks.py
sdk/python/scripts/: check_api_coverage.py
(+39299 files in other folders)
